[gd_scene load_steps=9 format=3 uid="uid://u0b3fspns44q"]

[ext_resource type="Script" uid="uid://jki17iwupbf4" path="res://Game/UserInterface/shopping_item.gd" id="1_kw1xt"]
[ext_resource type="FontFile" uid="uid://4uamk5gqxaoh" path="res://Game/UserInterface/fonts/Kenney High Square.ttf" id="1_wpgi0"]
[ext_resource type="Texture2D" uid="uid://chtlo6opc8jru" path="res://Assets/Cards/PlayCardLayout.png" id="2_kw1xt"]
[ext_resource type="Texture2D" uid="uid://b2b3yada0mr8y" path="res://Assets/Cards/CardPictures/PlayCard_SmallLoan.png" id="3_wboan"]
[ext_resource type="FontFile" uid="uid://b4nwhv1gcm4oj" path="res://Game/UserInterface/fonts/Kenney High.ttf" id="4_b35fi"]

[sub_resource type="LabelSettings" id="LabelSettings_7fj4s"]
font = ExtResource("1_wpgi0")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_q6bta"]
font = ExtResource("4_b35fi")

[sub_resource type="LabelSettings" id="LabelSettings_sksql"]
font = ExtResource("1_wpgi0")
font_size = 24

[node name="ShoppingItem" type="PanelContainer"]
script = ExtResource("1_kw1xt")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Name" type="Label" parent="MarginContainer/HBox"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "PLACEHOLDER"
label_settings = SubResource("LabelSettings_7fj4s")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="CardLayout" type="TextureRect" parent="MarginContainer/HBox"]
clip_contents = true
custom_minimum_size = Vector2(100, 145)
layout_mode = 2
texture = ExtResource("2_kw1xt")
expand_mode = 5

[node name="CardPicture" type="TextureRect" parent="MarginContainer/HBox/CardLayout"]
layout_mode = 2
offset_left = 11.0
offset_top = 25.0
offset_right = 89.0
offset_bottom = 75.1429
texture = ExtResource("3_wboan")

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/HBox"]
layout_mode = 2

[node name="Description" type="Label" parent="MarginContainer/HBox"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
text = "PLACEHOLDER"
label_settings = SubResource("LabelSettings_q6bta")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBox"]
layout_mode = 2

[node name="Price" type="Label" parent="MarginContainer/HBox"]
layout_mode = 2
text = "0$"
label_settings = SubResource("LabelSettings_sksql")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BuyButton" type="Button" parent="MarginContainer/HBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_wpgi0")
theme_override_font_sizes/font_size = 32
text = "BUY"

[connection signal="pressed" from="MarginContainer/HBox/BuyButton" to="." method="_on_buy_button_pressed"]
